# PlatformOps-2.0

./: .dockerignore  .env.example  .gitignore  App.tsx  DEPLOYMENT.md  Makefile  QUICK_START.md  README.md  TESTING.md  docker-compose.yml  index.css  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
Phase 1 - Local Application Testing/: .env  constants.ts  index.html  vite.config.ts
Phase 1 - Local Application Testing/lib/: supabase.ts
Phase 1 - Local Application Testing/services/: geminiService.ts
Phase 2 - Docker Container Testing/: Dockerfile
Phase 3 - Helm & Kubernetes Testing/opssight/: values.yaml
Phase 4 - CI-CD Pipeline Verification/: ci-cd.yaml
apps/api/: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: __init__.py  cloud.py  config.py  health.py  integrations.py  kubernetes.py  settings.py  websocket.py
apps/api/app/core/: config.py
apps/api/app/schemas/: __init__.py  cloud.py  common.py  integrations.py  kubernetes.py
apps/api/app/services/: __init__.py  argocd.py  cloud.py  github.py  kubernetes.py  prometheus.py
apps/api/tests/: __init__.py  test_health.py  test_kubernetes.py
apps/web/: Dockerfile
argocd/: application.yaml
charts/opssight/: Chart.yaml
components/: GeminiAssistant.tsx  Sidebar.tsx
components/ui/: Card.tsx  DeploymentModal.tsx  (+8 more)
contexts/: AuthContext.tsx  ClusterContext.tsx
hooks/: useKubernetes.ts
lib/: supabase.ts
services/: auth.ts  geminiService.ts  simulation.ts  storage.ts
(+16 files in other folders)
